feat: Implement Multi-Universe Architecture for Concurrent Playthroughs (#252)
* feat: Decouple wrestler state to support concurrent leagues

- Created LeagueWrestlerState entity for per-league dynamic attributes.
- Refactored Wrestler entity into a static template.
- Scoped Injuries and Titles to specific leagues.
- Added Flyway migrations for safe data transition to a default league.
- Implemented session-scoped LeagueContextService and UI League Selector.
- Refactored core services and UI views to be league-aware.

* feat: Implement Universe-based isolation for concurrent playthroughs

- Introduced Universe and WrestlerState entities to decouple playthrough progress from static templates.
- Refactored Injury, Title, Faction, Team, DramaEvent, Campaign, and Show to be universe-scoped.
- Implemented UniverseContextService and added a Universe selector to the MainLayout for session-scoped context switching.
- Updated core services and UI views to be universe-aware, ensuring isolated progression for fans, health, and tiers.
- Migrated pre-refactor data into a 'Default Universe' (ID 1) via Flyway migrations.
- Resolved compilation errors and restored project-standard Slf4j/Lombok usage.

* fix: Resolve critical issues from League to Universe refactoring

- Fixed MultiWrestlerFeudRepository query to select p.wrestler (type mismatch)
- Implemented TestUniverseConfiguration to provide singleton UniverseContextService in tests
- Corrected SegmentRepository by removing invalid w.manager and w.faction joins (moved to WrestlerState)
- Updated DatabaseCleaner to reference wrestler_state.faction_id in circular dependency cleanup
- Fixed FactionRepository queries to use m.wrestler instead of direct member comparison
- Verified all FactionServiceIT tests passing

* feat: Complete Universe-based isolation refactoring

- Finalized decoupling of wrestler state from static templates across the codebase.
- Updated all services, repositories, and UI views to be universe-aware.
- Imple