@@ -16,6 +16,8 @@
 */
 package com.github.javydreamercsw.base.domain.wrestler;
 
+import lombok.Getter;
+
 /**
  * Represents the different championship tiers in the ATW RPG system. Each title has specific fan
  * requirements and challenge costs.
@@ -39,12 +41,16 @@ public enum TitleTier {
       15000L,
       "Main event — top of the card, only the most over should get a shot.");
 
-  private final String titleName;
-  private final Long requiredFans;
-  private final Long challengeCost;
-  private final String description;
+  @Getter private final String titleName;
+  @Getter private final Long requiredFans;
+  @Getter private final Long challengeCost;
+  @Getter private final String description;
 
-  TitleTier(String titleName, Long requiredFans, Long challengeCost, String description) {
+  TitleTier(
+      final String titleName,
+      final Long requiredFans,
+      final Long challengeCost,
+      final String description) {
     this.titleName = titleName;
     this.requiredFans = requiredFans;
     this.challengeCost = challengeCost;
@@ -67,7 +73,7 @@ public enum TitleTier {
    * @param wrestlerFans The wrestler's current fan count
    * @return true if the wrestler can challenge for this title
    */
-  public boolean isEligible(Long wrestlerFans) {
+  public boolean isEligible(final Long wrestlerFans) {
     return wrestlerFans != null && wrestlerFans >= requiredFans;
   }
 
@@ -77,7 +83,7 @@ public enum TitleTier {
    * @param wrestlerFans The wrestler's current fan count
    * @return Array of eligible title tiers
    */
-  public static TitleTier[] getEligibleTitles(Long wrestlerFans) {
+  public static TitleTier[] getEligibleTitles(final Long wrestlerFans) {
     if (wrestlerFans == null || wrestlerFans < 0) {
       return new TitleTier[0];
     }
@@ -93,7 +99,7 @@ public enum TitleTier {
    * @param wrestlerFans The wrestler's current fan count
    * @return The highest eligible title tier, or null if none
    */
-  public static TitleTier getHighestEligibleTitle(Long wrestlerFans) {
+  public static TitleTier getHighestEligibleTitle(final Long wrestlerFans) {
     TitleTier[] eligible = getEligibleTitles(wrestlerFans);
     if (eligible.length == 0) {
       return null;
@@ -103,30 +109,13 @@ public enum TitleTier {
     return eligible[eligible.length - 1];
   }
 
-  // Getters
-  public String getTitleName() {
-    return titleName;
-  }
-
-  public Long getRequiredFans() {
-    return requiredFans;
-  }
-
-  public Long getChallengeCost() {
-    return challengeCost;
-  }
-
-  public String getDescription() {
-    return description;
-  }
-
   /**
    * Get a formatted display string with requirements.
    *
    * @return Formatted string like "World Title (100,000 fans required)"
    */
   public String getDisplayWithRequirement() {
-    return String.format("%s (%,d fans required)", titleName, requiredFans);
+    return "%s (%,d fans required)".formatted(titleName, requiredFans);
   }
 
   /**
