@@ -37,6 +37,7 @@ import org.jspecify.annotations.Nullable;
 public class FeudHeatEvent extends AbstractEntity<Long> {
   @Id
   @GeneratedValue(strategy = GenerationType.IDENTITY)
+  @Getter(onMethod_ = {@Nullable})
   @Column(name = "feud_heat_event_id")
   private Long id;
 
@@ -58,11 +59,6 @@ public class FeudHeatEvent extends AbstractEntity<Long> {
 
   @Column(name = "creation_date", nullable = false)
   private Instant creationDate;
-
-  @Override
-  public @Nullable Long getId() {
-    return id;
-  }
 
   @PrePersist
   protected void onCreate() {
@@ -102,7 +98,7 @@ public class FeudHeatEvent extends AbstractEntity<Long> {
       changeStr = "±0";
     }
 
-    return String.format("%s (%s heat → %d total)", reason, changeStr, heatAfterEvent);
+    return "%s (%s heat → %d total)".formatted(reason, changeStr, heatAfterEvent);
   }
 
   /** Get the heat change with appropriate emoji. */
