@@ -17,6 +17,7 @@
 package com.github.javydreamercsw.management.domain.injury;
 
 import java.util.Random;
+import lombok.Getter;
 
 /**
  * Represents the severity levels of injuries in the ATW RPG system. Different severities have
@@ -35,26 +36,26 @@ public enum InjurySeverity {
   /** Critical injury - very high health penalty, very expensive to heal */
   CRITICAL("Critical", 4, 7, 2, 3, 1, 1, 25000L, "💀");
 
-  private final String displayName;
-  private final int minHealthPenalty;
-  private final int maxHealthPenalty;
-  private final int minStaminaPenalty;
-  private final int maxStaminaPenalty;
-  private final int minHandSizePenalty;
-  private final int maxHandSizePenalty;
-  private final Long baseHealingCost;
-  private final String emoji;
+  @Getter private final String displayName;
+  @Getter private final int minHealthPenalty;
+  @Getter private final int maxHealthPenalty;
+  @Getter private final int minStaminaPenalty;
+  @Getter private final int maxStaminaPenalty;
+  @Getter private final int minHandSizePenalty;
+  @Getter private final int maxHandSizePenalty;
+  @Getter private final Long baseHealingCost;
+  @Getter private final String emoji;
 
   InjurySeverity(
-      String displayName,
-      int minHealthPenalty,
-      int maxHealthPenalty,
-      int minStaminaPenalty,
-      int maxStaminaPenalty,
-      int minHandSizePenalty,
-      int maxHandSizePenalty,
-      Long baseHealingCost,
-      String emoji) {
+      final String displayName,
+      final int minHealthPenalty,
+      final int maxHealthPenalty,
+      final int minStaminaPenalty,
+      final int maxStaminaPenalty,
+      final int minHandSizePenalty,
+      final int maxHandSizePenalty,
+      final Long baseHealingCost,
+      final String emoji) {
     this.displayName = displayName;
     this.minHealthPenalty = minHealthPenalty;
     this.maxHealthPenalty = maxHealthPenalty;
@@ -67,7 +68,7 @@ public enum InjurySeverity {
   }
 
   /** Get a random health penalty within the severity range. */
-  public int getRandomHealthPenalty(Random random) {
+  public int getRandomHealthPenalty(final Random random) {
     if (minHealthPenalty == maxHealthPenalty) {
       return minHealthPenalty;
     }
@@ -75,7 +76,7 @@ public enum InjurySeverity {
   }
 
   /** Get a random stamina penalty within the severity range. */
-  public int getRandomStaminaPenalty(Random random) {
+  public int getRandomStaminaPenalty(final Random random) {
     if (minStaminaPenalty == maxStaminaPenalty) {
       return minStaminaPenalty;
     }
@@ -83,7 +84,7 @@ public enum InjurySeverity {
   }
 
   /** Get a random hand size penalty within the severity range. */
-  public int getRandomHandSizePenalty(Random random) {
+  public int getRandomHandSizePenalty(final Random random) {
     if (minHandSizePenalty == maxHandSizePenalty) {
       return minHandSizePenalty;
     }
@@ -101,7 +102,7 @@ public enum InjurySeverity {
   }
 
   /** Check if a healing roll is successful. */
-  public boolean isHealingSuccessful(int rollResult) {
+  public boolean isHealingSuccessful(final int rollResult) {
     return rollResult >= getHealingSuccessThreshold();
   }
 
@@ -109,43 +110,6 @@ public enum InjurySeverity {
   public int getHealingSuccessPercentage() {
     int threshold = getHealingSuccessThreshold();
     return ((6 - threshold + 1) * 100) / 6;
-  }
-
-  // Getters
-  public String getDisplayName() {
-    return displayName;
-  }
-
-  public int getMinHealthPenalty() {
-    return minHealthPenalty;
-  }
-
-  public int getMaxHealthPenalty() {
-    return maxHealthPenalty;
-  }
-
-  public int getMinStaminaPenalty() {
-    return minStaminaPenalty;
-  }
-
-  public int getMaxStaminaPenalty() {
-    return maxStaminaPenalty;
-  }
-
-  public int getMinHandSizePenalty() {
-    return minHandSizePenalty;
-  }
-
-  public int getMaxHandSizePenalty() {
-    return maxHandSizePenalty;
-  }
-
-  public Long getBaseHealingCost() {
-    return baseHealingCost;
-  }
-
-  public String getEmoji() {
-    return emoji;
   }
 
   /** Get display string with emoji. */
@@ -163,6 +127,6 @@ public enum InjurySeverity {
 
   /** Get healing info display. */
   public String getHealingInfoDisplay() {
-    return String.format("%,d fans (%d%% success)", baseHealingCost, getHealingSuccessPercentage());
+    return "%,d fans (%d%% success)".formatted(baseHealingCost, getHealingSuccessPercentage());
   }
 }
