@@ -18,6 +18,7 @@ package com.github.javydreamercsw.management.service.sync.entity.notion;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.javydreamercsw.base.ai.notion.NotionApiExecutor;
+import com.github.javydreamercsw.base.ai.notion.NotionHandler;
 import com.github.javydreamercsw.base.ai.notion.ShowTemplatePage;
 import com.github.javydreamercsw.management.domain.show.template.RecurrenceType;
 import com.github.javydreamercsw.management.domain.show.template.ShowTemplate;
@@ -25,110 +26,114 @@ import com.github.javydreamercsw.management.domain.show.type.ShowType;
 import com.github.javydreamercsw.management.domain.show.type.ShowTypeRepository;
 import com.github.javydreamercsw.management.service.show.template.ShowTemplateService;
 import com.github.javydreamercsw.management.service.sync.SyncServiceDependencies;
+import com.github.javydreamercsw.management.service.sync.SyncSessionManager;
 import com.github.javydreamercsw.management.service.sync.base.BaseSyncService;
 import java.time.DayOfWeek;
 import java.time.Month;
+import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.NonNull;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-/** Service responsible for synchronizing show templates from Notion to the database. */
+/**
+ * Service to synchronize Show Templates from Notion. This service identifies new or updated
+ * templates in Notion and synchronizes them to the local database.
+ */
 @Service
 @Slf4j
-public class ShowTemplateSyncService extends BaseSyncService {
+public class ShowTemplateSyncService extends BaseSyncService implements NotionEntitySyncService {
 
-  @Autowired private ShowTemplateService showTemplateService;
+  private final ShowTemplateService showTemplateService;
+  private final ShowTypeRepository showTypeRepository;
 
-  @Autowired
-  private com.github.javydreamercsw.management.domain.show.type.ShowTypeRepository
-      showTypeRepository;
-
-  @Autowired
-  public ShowTemplateSyncService(
-      ObjectMapper objectMapper,
-      SyncServiceDependencies syncServiceDependencies,
-      NotionApiExecutor notionApiExecutor) {
-    super(objectMapper, syncServiceDependencies, notionApiExecutor);
-  }
+  @Autowired @Lazy private ShowTemplateSyncService self;
 
   public ShowTemplateSyncService(
-      ObjectMapper objectMapper,
-      SyncServiceDependencies syncServiceDependencies,
-      NotionApiExecutor notionApiExecutor,
-      ShowTemplateService showTemplateService,
-      ShowTypeRepository showTypeRepository) {
+      final ObjectMapper objectMapper,
+      final SyncServiceDependencies syncServiceDependencies,
+      final ShowTemplateService showTemplateService,
+      final ShowTypeRepository showTypeRepository,
+      final NotionApiExecutor notionApiExecutor) {
     super(objectMapper, syncServiceDependencies, notionApiExecutor);
     this.showTemplateService = showTemplateService;
     this.showTypeRepository = showTypeRepository;
+    this.self = this;
+  }
+
+  @Override
+  @Transactional
+  public SyncResult syncToNotion(@NonNull final String operationId) {
+    log.warn("syncToNotion not implemented for ShowTemplateSyncService");
+    return SyncResult.success("Show Templates", 0, 0, 0);
+  }
+
+  @Override
+  @Transactional
+  public SyncResult syncToNotion(@NonNull final String operationId, final Collection<Long> ids) {
+    return syncToNotion(operationId);
   }
 
   /**
-   * Synchronizes show templates from Notion to the local JSON file and database.
+   * Synchronizes all show templates from Notion.
    *
-   * @param operationId Optional operation ID for progress tracking
-   * @return SyncResult indicating success or failure with details
+   * @param operationId The unique ID for this sync operation
+   * @return SyncResult containing the synchronization metrics
    */
-  public SyncResult syncShowTemplates(@NonNull String operationId) {
-    // Check if already synced in current session
-    if (syncServiceDependencies.getSyncSessionManager().isAlreadySyncedInSession("templates")) {
-      log.info("⏭️ Show templates already synced in current session, skipping");
+  public SyncResult syncShowTemplates(final String operationId) {
+    SyncSessionManager sessionManager = syncServiceDependencies.getSyncSessionManager();
+
+    if (sessionManager.isAlreadySyncedInSession("Show Templates")) {
+      log.info("Show templates synchronization already in progress. Skipping.");
       return SyncResult.success("Show Templates", 0, 0, 0);
     }
 
-    log.info("🎭 Starting show templates synchronization from Notion...");
-    long startTime = System.currentTimeMillis();
-
     try {
-      SyncResult result = performShowTemplatesSync(operationId, startTime);
-      if (result.isSuccess()) {
-        syncServiceDependencies.getSyncSessionManager().markAsSyncedInSession("Show Templates");
-      }
-      return result;
-    } catch (Exception e) {
-      log.error("Failed to sync show templates", e);
-      return SyncResult.failure("Show Templates", e.getMessage());
+      sessionManager.markAsSyncedInSession("Show Templates");
+      return performShowTemplatesSync(operationId);
+    } finally {
+      sessionManager.resetSyncStatus("Show Templates");
     }
   }
 
-  private SyncResult performShowTemplatesSync(@NonNull String operationId, long startTime) {
+  private SyncResult performShowTemplatesSync(final String operationId) {
+    long startTime = System.currentTimeMillis();
+    log.info("🎭 Starting show templates synchronization from Notion...");
+
     try {
-      // Check if entity is enabled
-      if (!syncServiceDependencies.getNotionSyncProperties().isEntityEnabled("templates")) {
-        log.info("Show templates sync is disabled in configuration");
-        return SyncResult.success("Show Templates", 0, 0, 0);
-      }
-
-      // Initialize progress tracking (3 steps: retrieve, convert, save to database)
-      syncServiceDependencies
-          .getProgressTracker()
-          .startOperation(operationId, "Sync Show Templates", 3);
-      syncServiceDependencies
-          .getProgressTracker()
-          .updateProgress(operationId, 1, "Retrieving show templates from Notion...");
-
-      // Retrieve show templates from Notion
-      log.info("📥 Retrieving show templates from Notion...");
-      long retrieveStart = System.currentTimeMillis();
-
-      // Check if NotionHandler is available
       if (!isNotionHandlerAvailable()) {
         log.warn("NotionHandler not available. Cannot sync show templates from Notion.");
         return SyncResult.failure(
             "Show Templates", "NotionHandler is not available for sync operations");
       }
 
-      syncServiceDependencies.getRateLimitService().acquirePermit();
-      List<ShowTemplatePage> templatePages =
-          notionApiExecutor.getNotionHandler().loadAllShowTemplates();
-      log.info(
-          "✅ Retrieved {} show templates in {}ms",
-          templatePages.size(),
-          System.currentTimeMillis() - retrieveStart);
+      // Check if sync is enabled for this entity
+      if (!syncServiceDependencies.getNotionSyncProperties().isEntityEnabled("templates")) {
+        log.info("Show templates sync is disabled in configuration");
+        return SyncResult.success("Show Templates", 0, 0, 0);
+      }
+
+      // Start progress tracking
+      syncServiceDependencies
+          .getProgressTracker()
+          .startOperation(operationId, "Sync Show Templates", 3);
+
+      NotionHandler notionHandler = syncServiceDependencies.getNotionHandler();
+
+      // 1. Load from Notion
+      syncServiceDependencies
+          .getProgressTracker()
+          .updateProgress(operationId, 1, "Retrieving show templates from Notion...");
+      log.info("📥 Retrieving show templates from Notion...");
+      List<ShowTemplatePage> templatePages = notionHandler.loadAllShowTemplates();
+      log.info("✅ Retrieved {} show templates in {}ms", templatePages.size(), 0);
 
       if (templatePages.isEmpty()) {
         log.info("No show templates found in Notion database");
@@ -144,7 +149,7 @@ public class ShowTemplateSyncService extends BaseSyncService {
           .updateProgress(
               operationId,
               2,
-              String.format("Converting %d show templates to DTOs...", templatePages.size()));
+              "Converting %d show templates to DTOs...".formatted(templatePages.size()));
       log.info("🔄 Converting show templates to DTOs...");
       long convertStart = System.currentTimeMillis();
       List<ShowTemplateDTO> templateDTOs =
@@ -154,22 +159,28 @@ public class ShowTemplateSyncService extends BaseSyncService {
           templateDTOs.size(),
           System.currentTimeMillis() - convertStart);
 
+      List<ShowTemplateDTO> filteredDTOs =
+          templateDTOs.stream()
+              .filter(dto -> dto.getShowType() != null && !dto.getShowType().isBlank())
+              .collect(Collectors.toList());
+      log.info("Found {} templates with show types.", filteredDTOs.size());
+
       // Save show templates to database
       syncServiceDependencies
           .getProgressTracker()
           .updateProgress(
               operationId,
               3,
-              String.format("Saving %d show templates to database...", templateDTOs.size()));
+              "Saving %d show templates to database...".formatted(filteredDTOs.size()));
       log.info("💾 Saving show templates to database...");
       long dbStart = System.currentTimeMillis();
-      int savedCount = saveShowTemplatesToDatabase(templateDTOs);
+      int successCount = saveShowTemplatesToDatabase(filteredDTOs);
       long dbTime = System.currentTimeMillis() - dbStart;
-      log.info("✅ Saved {} show templates to database in {}ms", savedCount, dbTime);
+      log.info("✅ Saved {} show templates to database in {}ms", successCount, dbTime);
 
       long totalTime = System.currentTimeMillis() - startTime;
       log.info(
-          "🎉 Successfully synchronized {} show templates in {}ms total", savedCount, totalTime);
+          "🎉 Successfully synchronized {} show templates in {}ms total", successCount, totalTime);
 
       // Complete progress tracking
       syncServiceDependencies
@@ -177,15 +188,15 @@ public class ShowTemplateSyncService extends BaseSyncService {
           .completeOperation(
               operationId,
               true,
-              String.format("Successfully synced %d show templates", savedCount),
-              savedCount);
+              "Successfully synced %d show templates".formatted(successCount),
+              successCount);
 
       // Record success in health monitor
       syncServiceDependencies
           .getHealthMonitor()
-          .recordSuccess("Show Templates", totalTime, savedCount);
+          .recordSuccess("Show Templates", totalTime, successCount);
 
-      return SyncResult.success("Show Templates", savedCount, 0, 0);
+      return SyncResult.success("Show Templates", successCount, 0, 0);
 
     } catch (Exception e) {
       long totalTime = System.currentTimeMillis() - startTime;
@@ -203,7 +214,7 @@ public class ShowTemplateSyncService extends BaseSyncService {
   }
 
   private List<ShowTemplateDTO> convertShowTemplatePagesToDTOs(
-      @NonNull List<ShowTemplatePage> templatePages, String operationId) {
+      @NonNull final List<ShowTemplatePage> templatePages, final String operationId) {
     return processWithControlledParallelism(
         templatePages,
         this::convertShowTemplatePageToDTO,
@@ -214,7 +225,8 @@ public class ShowTemplateSyncService extends BaseSyncService {
   }
 
   /** Converts a single ShowTemplatePage to ShowTemplateDTO. */
-  private ShowTemplateDTO convertShowTemplatePageToDTO(@NonNull ShowTemplatePage templatePage) {
+  private ShowTemplateDTO convertShowTemplatePageToDTO(
+      @NonNull final ShowTemplatePage templatePage) {
     ShowTemplateDTO dto = new ShowTemplateDTO();
     dto.setName(
         syncServiceDependencies
@@ -261,26 +273,13 @@ public class ShowTemplateSyncService extends BaseSyncService {
     return dto;
   }
 
-  /**
-   * Saves the list of ShowTemplateDTO objects to the database.
-   *
-   * @param templateDTOs List of ShowTemplateDTO objects to save
-   * @return Number of show templates successfully saved/updated
-   */
-  private int saveShowTemplatesToDatabase(@NonNull List<ShowTemplateDTO> templateDTOs) {
-    log.info("💾 Saving {} show templates to database...", templateDTOs.size());
+  private int saveShowTemplatesToDatabase(@NonNull final List<ShowTemplateDTO> templateDTOs) {
     int savedCount = 0;
     int updatedCount = 0;
     int skippedCount = 0;
 
     for (ShowTemplateDTO dto : templateDTOs) {
       try {
-        if (dto.getShowType() == null || dto.getShowType().trim().isEmpty()) {
-          log.warn("Skipping template '{}' - no show type could be determined.", dto.getName());
-          skippedCount++;
-          continue;
-        }
-
         ShowTemplate template = null;
         if (dto.getExternalId() != null && !dto.getExternalId().isBlank()) {
           template = showTemplateService.findByExternalId(dto.getExternalId()).orElse(null);
@@ -350,14 +349,13 @@ public class ShowTemplateSyncService extends BaseSyncService {
         savedCount,
         updatedCount,
         skippedCount);
-    return savedCount;
+    return savedCount + updatedCount;
   }
 
   /** DTO for Show Template data from Notion. */
   @Setter
   @Getter
   public static class ShowTemplateDTO {
-    // Getters and setters
     private String name;
     private String description;
     private String showType;
