@@ -31,6 +31,7 @@ import com.github.javydreamercsw.management.domain.show.segment.rule.SegmentRule
 import com.github.javydreamercsw.management.domain.title.Title;
 import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
 import com.github.javydreamercsw.management.domain.wrestler.WrestlerRepository;
+import com.github.javydreamercsw.management.domain.wrestler.WrestlerState;
 import com.github.javydreamercsw.management.dto.ranking.TitleReignDTO;
 import com.github.javydreamercsw.management.service.campaign.CampaignService;
 import com.github.javydreamercsw.management.service.feud.MultiWrestlerFeudService;
@@ -41,6 +42,7 @@ import com.github.javydreamercsw.management.service.rivalry.RivalryService;
 import com.github.javydreamercsw.management.service.season.SeasonService;
 import com.github.javydreamercsw.management.service.segment.SegmentService;
 import com.github.javydreamercsw.management.service.title.TitleService;
+import com.github.javydreamercsw.management.service.universe.UniverseContextService;
 import com.github.javydreamercsw.management.service.wrestler.WrestlerService;
 import com.github.javydreamercsw.management.ui.component.HistoryTimelineComponent;
 import com.github.javydreamercsw.management.ui.component.ReignCardComponent;
@@ -105,6 +107,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
   private final CampaignService campaignService;
   private final SeasonService seasonService;
   private final ImageStorageService imageStorageService;
+  private final UniverseContextService universeContextService;
   private final com.github.javydreamercsw.management.service.relationship
           .WrestlerRelationshipService
       relationshipService;
@@ -138,24 +141,26 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
 
   @Autowired
   public WrestlerProfileView(
-      WrestlerService wrestlerService,
-      WrestlerRepository wrestlerRepository,
-      TitleService titleService,
-      RankingService rankingService,
-      SegmentService segmentService,
-      MultiWrestlerFeudService multiWrestlerFeudService,
-      RivalryService rivalryService,
-      SeasonService seasonService,
-      InjuryService injuryService,
-      NpcService npcService,
-      @Qualifier("baseAccountService") AccountService accountService,
-      CampaignService campaignService,
-      ImageStorageService imageStorageService,
-      com.github.javydreamercsw.management.service.relationship.WrestlerRelationshipService
+      final WrestlerService wrestlerService,
+      final WrestlerRepository wrestlerRepository,
+      final TitleService titleService,
+      final RankingService rankingService,
+      final SegmentService segmentService,
+      final MultiWrestlerFeudService multiWrestlerFeudService,
+      final RivalryService rivalryService,
+      final SeasonService seasonService,
+      final InjuryService injuryService,
+      final NpcService npcService,
+      @Qualifier("baseAccountService") final AccountService accountService,
+      final CampaignService campaignService,
+      final ImageStorageService imageStorageService,
+      final UniverseContextService universeContextService,
+      final com.github.javydreamercsw.management.service.relationship.WrestlerRelationshipService
           relationshipService,
-      com.github.javydreamercsw.management.service.campaign.WrestlerStatusService
+      final com.github.javydreamercsw.management.service.campaign.WrestlerStatusService
           wrestlerStatusService,
-      com.github.javydreamercsw.management.service.campaign.StatusCardService statusCardService) {
+      final com.github.javydreamercsw.management.service.campaign.StatusCardService
+          statusCardService) {
     this.wrestlerService = wrestlerService;
     this.wrestlerRepository = wrestlerRepository;
     this.titleService = titleService;
@@ -169,6 +174,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
     this.campaignService = campaignService;
     this.seasonService = seasonService;
     this.imageStorageService = imageStorageService;
+    this.universeContextService = universeContextService;
     this.relationshipService = relationshipService;
     this.wrestlerStatusService = wrestlerStatusService;
     this.statusCardService = statusCardService;
@@ -287,7 +293,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
 
   @Override
   @Transactional
-  public void beforeEnter(BeforeEnterEvent event) {
+  public void beforeEnter(final BeforeEnterEvent event) {
     RouteParameters parameters = event.getRouteParameters();
     if (parameters.get("wrestlerId").isPresent()) {
       Long wrestlerId = Long.valueOf(parameters.get("wrestlerId").get());
@@ -308,6 +314,8 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
     if (wrestler != null && wrestler.getId() != null) {
       // Re-fetch to ensure we have the latest state (e.g., after status changes)
       wrestlerService.findByIdWithDetails(wrestler.getId()).ifPresent(w -> wrestler = w);
+      Long universeId = universeContextService.getCurrentUniverseId();
+      WrestlerState state = wrestlerService.getOrCreateState(wrestler.getId(), universeId);
 
       heroDetailsColumn
           .getChildren()
@@ -324,28 +332,29 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
               true,
               securityUtils,
               accountService,
-              imageStorageService));
+              imageStorageService,
+              universeContextService));
       wrestlerName.setText(wrestler.getName());
-      String details =
-          String.format("Gender: %s, Fans: %d", wrestler.getGender(), wrestler.getFans());
+      String details = "Gender: %s, Fans: %d".formatted(wrestler.getGender(), state.getFans());
       if (wrestler.getHeritageTag() != null && !wrestler.getHeritageTag().isEmpty()) {
-        details += String.format(", Heritage: %s", wrestler.getHeritageTag());
+        details += ", Heritage: %s".formatted(wrestler.getHeritageTag());
       }
       wrestlerDetails.setText(details);
 
-      wrestlerImage.setSrc(wrestlerService.resolveWrestlerImage(wrestler));
+      wrestlerImage.setSrc(wrestlerService.resolveWrestlerImage(wrestler).url());
 
       // Fetch and display wrestler stats
-      Optional<WrestlerStats> stats = wrestlerService.getWrestlerStats(wrestler.getId());
+      Optional<WrestlerStats> stats =
+          wrestlerService.getWrestlerStats(wrestler.getId(), universeId);
       statsLayout.removeAll();
-      statsLayout.add(new H3("Career Stats"));
+      statsLayout.add(new H3("Career Stats (Universe Context)"));
 
       Paragraph conditionPara =
-          new Paragraph("Physical Condition: " + wrestler.getPhysicalCondition() + "%");
+          new Paragraph("Physical Condition: " + state.getPhysicalCondition() + "%");
       conditionPara.addClassNames(LumoUtility.FontWeight.BOLD);
-      if (wrestler.getPhysicalCondition() < 50) {
+      if (state.getPhysicalCondition() < 50) {
         conditionPara.addClassNames(LumoUtility.TextColor.ERROR);
-      } else if (wrestler.getPhysicalCondition() < 80) {
+      } else if (state.getPhysicalCondition() < 80) {
         conditionPara.addClassNames(LumoUtility.TextColor.WARNING);
       } else {
         conditionPara.addClassNames(LumoUtility.TextColor.SUCCESS);
@@ -360,7 +369,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
         double totalMatches = wrestlerStats.getWins() + wrestlerStats.getLosses();
         if (totalMatches > 0) {
           double winPercentage = (wrestlerStats.getWins() / totalMatches) * 100;
-          statsLayout.add(new Paragraph(String.format("Win Percentage: %.2f%%", winPercentage)));
+          statsLayout.add(new Paragraph("Win Percentage: %.2f%%".formatted(winPercentage)));
         }
       } else {
         statsLayout.add(new Paragraph("Stats not available."));
@@ -426,9 +435,8 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
       biographyContainer.removeAll();
       biographyContainer.setPadding(false);
       biographyContainer.add(new H3("Biography"));
-      if (wrestler.getManager() != null) {
-        Paragraph managerParagraph =
-            new Paragraph("Managed by: " + wrestler.getManager().getName());
+      if (state.getManager() != null) {
+        Paragraph managerParagraph = new Paragraph("Managed by: " + state.getManager().getName());
         managerParagraph.setId("manager-name");
         biographyContainer.add(managerParagraph);
       }
@@ -451,12 +459,12 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
             rel -> {
               Wrestler partner = rel.getPartner(wrestler);
               String text =
-                  String.format(
-                      "%s: %s (Level: %d%s)",
-                      rel.getType().getDisplayName(),
-                      partner.getName(),
-                      rel.getLevel(),
-                      rel.getIsStoryline() ? ", Storyline" : "");
+                  "%s: %s (Level: %d%s)"
+                      .formatted(
+                          rel.getType().getDisplayName(),
+                          partner.getName(),
+                          rel.getLevel(),
+                          rel.getIsStoryline() ? ", Storyline" : "");
               relationshipsContainer.add(new Paragraph(text));
             });
       }
@@ -465,9 +473,9 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
       highlightsContainer.removeAll();
       highlightsContainer.setPadding(false);
       highlightsContainer.add(new H3("Career Highlights"));
-      List<Title> titlesWon = titleService.findTitlesByChampion(wrestler);
+      List<Title> titlesWon = titleService.findTitlesByChampion(wrestler, universeId);
       if (titlesWon.isEmpty()) {
-        highlightsContainer.add(new Paragraph("No titles won yet."));
+        highlightsContainer.add(new Paragraph("No titles won yet in this universe."));
       } else {
         titlesWon.forEach(title -> highlightsContainer.add(new Paragraph(title.getName())));
       }
@@ -493,11 +501,11 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
       injuriesLayout.add(new H3("Bumps & Injuries"));
 
       Paragraph physicalConditionPara =
-          new Paragraph("Physical Condition: " + wrestler.getPhysicalCondition() + "%");
+          new Paragraph("Physical Condition: " + state.getPhysicalCondition() + "%");
       physicalConditionPara.addClassNames(LumoUtility.FontWeight.BOLD);
-      if (wrestler.getPhysicalCondition() < 50) {
+      if (state.getPhysicalCondition() < 50) {
         physicalConditionPara.addClassNames(LumoUtility.TextColor.ERROR);
-      } else if (wrestler.getPhysicalCondition() < 80) {
+      } else if (state.getPhysicalCondition() < 80) {
         physicalConditionPara.addClassNames(LumoUtility.TextColor.WARNING);
       } else {
         physicalConditionPara.addClassNames(LumoUtility.TextColor.SUCCESS);
@@ -509,8 +517,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
         resetWearAndTearButton.addThemeVariants(ButtonVariant.LUMO_ERROR, ButtonVariant.LUMO_SMALL);
         resetWearAndTearButton.addClickListener(
             e -> {
-              wrestler.setPhysicalCondition(100);
-              wrestlerService.save(wrestler);
+              wrestlerService.resetWearAndTear(wrestler.getId(), universeId);
               updateView();
               com.vaadin.flow.component.notification.Notification.show(
                   "Wear & Tear reset to 100%!");
@@ -518,13 +525,14 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
         injuriesLayout.add(resetWearAndTearButton);
       }
 
-      injuriesLayout.add(new Paragraph("Bumps: " + wrestler.getBumps()));
-      if (wrestler.getInjuries().isEmpty()) {
+      injuriesLayout.add(new Paragraph("Bumps: " + state.getBumps()));
+      List<com.github.javydreamercsw.management.domain.injury.Injury> injuries =
+          injuryService.getAllInjuriesForWrestler(wrestler.getId(), universeId);
+      if (injuries.isEmpty()) {
         injuriesLayout.add(new Paragraph("No current injuries."));
       } else {
-        wrestler
-            .getInjuries()
-            .forEach(injury -> injuriesLayout.add(new Paragraph("- " + injury.getDisplayString())));
+        injuries.forEach(
+            injury -> injuriesLayout.add(new Paragraph("- " + injury.getDisplayString())));
       }
 
       updateMatchAndFeudHistory(); // Initial call to populate match and feud history
@@ -650,7 +658,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
       feudHistoryItems.forEach(
           item ->
               feudHistoryLayout.add(
-                  new Paragraph(String.format("%s (Heat: %d)", item.name(), item.heat()))));
+                  new Paragraph("%s (Heat: %d)".formatted(item.name(), item.heat()))));
     }
   }
 }
