@@ -18,6 +18,7 @@ package com.github.javydreamercsw.management.ui.view.show;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -30,13 +31,16 @@ import com.github.javydreamercsw.management.domain.show.Show;
 import com.github.javydreamercsw.management.domain.show.segment.rule.SegmentRuleRepository;
 import com.github.javydreamercsw.management.domain.show.segment.type.SegmentTypeRepository;
 import com.github.javydreamercsw.management.domain.wrestler.WrestlerRepository;
+import com.github.javydreamercsw.management.service.npc.NpcService;
 import com.github.javydreamercsw.management.service.show.ShowService;
 import com.github.javydreamercsw.management.service.show.planning.ProposedSegment;
 import com.github.javydreamercsw.management.service.show.planning.ProposedShow;
 import com.github.javydreamercsw.management.service.show.planning.ShowPlanningAiService;
 import com.github.javydreamercsw.management.service.show.planning.ShowPlanningService;
 import com.github.javydreamercsw.management.service.show.planning.dto.ShowPlanningContextDTO;
+import com.github.javydreamercsw.management.service.show.template.ShowTemplateService;
 import com.github.javydreamercsw.management.service.title.TitleService;
+import com.github.javydreamercsw.management.service.universe.UniverseContextService;
 import com.github.javydreamercsw.management.service.world.ArenaService;
 import com.github.javydreamercsw.management.service.wrestler.WrestlerService;
 import com.vaadin.flow.component.UI;
@@ -45,8 +49,8 @@ import com.vaadin.flow.component.combobox.ComboBox;
 import com.vaadin.flow.component.grid.Grid;
 import com.vaadin.flow.component.textfield.TextArea;
 import com.vaadin.flow.router.BeforeEvent;
-import java.util.ArrayList;
-import java.util.Arrays;
+import com.vaadin.flow.router.QueryParameters;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -62,25 +66,23 @@ class ShowPlanningViewTest {
   @Mock private ShowPlanningAiService showPlanningAiService;
   @Mock private WrestlerRepository wrestlerRepository;
   @Mock private WrestlerService wrestlerService;
-
-  @Mock
-  private com.github.javydreamercsw.management.service.show.template.ShowTemplateService
-      showTemplateService;
-
+  @Mock private ShowTemplateService showTemplateService;
   private ShowPlanningView showPlanningView;
   @Mock private TitleService titleService;
   @Mock private SegmentTypeRepository segmentTypeRepository;
   @Mock private SegmentRuleRepository segmentRuleRepository;
-  @Mock private com.github.javydreamercsw.management.service.npc.NpcService npcService;
+  @Mock private NpcService npcService;
   @Mock private ObjectMapper objectMapper;
   @Mock private SegmentNarrationServiceFactory aiFactory;
   @Mock private ArenaService arenaService;
   @Mock private NotificationService notificationService;
 
   @BeforeEach
-  void setUp() {
+  public void setUp() {
     aiFactory = mock(SegmentNarrationServiceFactory.class);
     MockitoAnnotations.openMocks(this);
+    UniverseContextService universeContextService = mock(UniverseContextService.class);
+
     showPlanningView =
         new ShowPlanningView(
             showService,
@@ -96,7 +98,8 @@ class ShowPlanningViewTest {
             objectMapper,
             aiFactory,
             arenaService,
-            notificationService);
+            notificationService,
+            universeContextService);
     // Mock the UI since we are not in a Vaadin environment
     UI ui = mock(UI.class);
     UI.setCurrent(ui);
@@ -109,6 +112,7 @@ class ShowPlanningViewTest {
     Show show = new Show();
     show.setId(1L);
     show.setName("Test Show");
+    show.setShowDate(LocalDate.now());
 
     // Mock the ComboBox to return the mock Show
     @SuppressWarnings("unchecked")
@@ -135,39 +139,35 @@ class ShowPlanningViewTest {
   }
 
   @Test
+  @SuppressWarnings("unchecked")
   void loadContextTest() throws Exception {
     // Create a mock Show
+    long showId = 1L;
     Show show = new Show();
-    show.setId(1L);
+    show.setId(showId);
     show.setName("Test Show");
+    show.setShowDate(LocalDate.now());
 
     // Mock the ComboBox to return the mock Show
-    @SuppressWarnings("unchecked")
-    ComboBox<Show> showComboBox = mock(ComboBox.class);
-    when(showComboBox.getValue()).thenReturn(show);
-    ReflectionTestUtils.setField(showPlanningView, "showComboBox", showComboBox);
+    ComboBox<Show> showComboBox =
+        (ComboBox<Show>) ReflectionTestUtils.getField(showPlanningView, "showComboBox");
+    showComboBox.setValue(show);
 
     // Create a mock ShowPlanningContext
     ShowPlanningContextDTO context = new ShowPlanningContextDTO();
-    context.setCurrentRivalries(new ArrayList<>());
-    context.setRecentPromos(new ArrayList<>());
-    context.setRecentSegments(new ArrayList<>());
+    when(showPlanningService.getShowPlanningContext(show)).thenReturn(context);
 
-    // Create a mock ProposedShow
     ProposedShow proposedShow = new ProposedShow();
     ProposedSegment segment1 = new ProposedSegment();
     segment1.setType("Match");
     segment1.setNarration("A vs B");
-    segment1.setParticipants(Arrays.asList("A", "B"));
+    segment1.setParticipants(List.of("A", "B"));
     ProposedSegment segment2 = new ProposedSegment();
     segment2.setType("Promo");
-    segment2.setNarration("C talks");
+    segment2.setNarration("C speaks");
     segment2.setParticipants(List.of("C"));
-    proposedShow.setSegments(Arrays.asList(segment1, segment2));
-
-    when(showPlanningService.getShowPlanningContext(show)).thenReturn(context);
-    when(showPlanningAiService.planShow(any(ShowPlanningContextDTO.class)))
-        .thenReturn(proposedShow);
+    proposedShow.setSegments(List.of(segment1, segment2));
+    when(showPlanningAiService.planShow(any())).thenReturn(proposedShow);
 
     // Mock the ObjectMapper
     ObjectMapper objectMapper = new ObjectMapper();
@@ -194,7 +194,6 @@ class ShowPlanningViewTest {
         objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(context),
         contextArea.getValue());
 
-    @SuppressWarnings("unchecked")
     Grid<ProposedSegment> proposedSegmentsGrid =
         (Grid<ProposedSegment>)
             ReflectionTestUtils.getField(showPlanningView, "proposedSegmentsGrid");
@@ -205,33 +204,28 @@ class ShowPlanningViewTest {
   }
 
   @Test
+  @SuppressWarnings("unchecked")
   void setParameterTest() throws Exception {
     // Create a mock Show
     long showId = 1L;
     Show show = new Show();
     show.setId(showId);
     show.setName("Test Show");
+    show.setShowDate(LocalDate.now());
 
-    // Mock the ShowService to return the mock Show
     when(showService.getShowById(showId)).thenReturn(Optional.of(show));
 
     // Create a mock ShowPlanningContext
     ShowPlanningContextDTO context = new ShowPlanningContextDTO();
-    context.setCurrentRivalries(new ArrayList<>());
-    context.setRecentPromos(new ArrayList<>());
-    context.setRecentSegments(new ArrayList<>());
+    when(showPlanningService.getShowPlanningContext(show)).thenReturn(context);
 
-    // Create a mock ProposedShow
     ProposedShow proposedShow = new ProposedShow();
     ProposedSegment segment1 = new ProposedSegment();
     segment1.setType("Match");
     segment1.setNarration("A vs B");
-    segment1.setParticipants(Arrays.asList("A", "B"));
+    segment1.setParticipants(List.of("A", "B"));
     proposedShow.setSegments(List.of(segment1));
-
-    when(showPlanningService.getShowPlanningContext(show)).thenReturn(context);
-    when(showPlanningAiService.planShow(any(ShowPlanningContextDTO.class)))
-        .thenReturn(proposedShow);
+    when(showPlanningAiService.planShow(any())).thenReturn(proposedShow);
 
     // Mock the ObjectMapper
     ObjectMapper objectMapper = new ObjectMapper();
@@ -250,18 +244,10 @@ class ShowPlanningViewTest {
         .thenReturn(List.of(mock(SegmentNarrationService.class)));
     // Call the method to be tested
     showPlanningView.setParameter(mock(BeforeEvent.class), showId);
+    ReflectionTestUtils.invokeMethod(showPlanningView, "loadContext");
     ReflectionTestUtils.invokeMethod(showPlanningView, "proposeSegments");
 
-    // Debug: Print grid contents
-    @SuppressWarnings("unchecked")
-    Grid<ProposedSegment> debugGrid =
-        (Grid<ProposedSegment>)
-            ReflectionTestUtils.getField(showPlanningView, "proposedSegmentsGrid");
-    List<ProposedSegment> debugItems = debugGrid.getGenericDataView().getItems().toList();
-    System.out.println("DEBUG: ProposedSegment grid items after proposeSegments(): " + debugItems);
-
     // Verify the results
-    @SuppressWarnings("unchecked")
     ComboBox<Show> showComboBox =
         (ComboBox<Show>) ReflectionTestUtils.getField(showPlanningView, "showComboBox");
     assertEquals(show, showComboBox.getValue());
@@ -271,7 +257,6 @@ class ShowPlanningViewTest {
         objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(context),
         contextArea.getValue());
 
-    @SuppressWarnings("unchecked")
     Grid<ProposedSegment> proposedSegmentsGrid =
         (Grid<ProposedSegment>)
             ReflectionTestUtils.getField(showPlanningView, "proposedSegmentsGrid");
@@ -287,6 +272,7 @@ class ShowPlanningViewTest {
     Show show = new Show();
     show.setId(showId);
     show.setName("Test Show");
+    show.setShowDate(LocalDate.now());
 
     // Mock the ComboBox to return the mock Show
     @SuppressWarnings("unchecked")
@@ -304,6 +290,6 @@ class ShowPlanningViewTest {
     viewDetailsButton.click();
 
     // Verify that navigate was called with the correct parameters
-    verify(ui).navigate(ShowDetailView.class, showId);
+    verify(ui).navigate(eq(ShowDetailView.class), eq(showId), any(QueryParameters.class));
   }
 }
